Fix: Horizontal overflow caused by app screenshot

--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ p, li {
 }
 .project {
   margin: 3rem 0 3rem;
+  overflow: hidden;
 }
 
 /* SHARED COMPONENTS */
